--- a/EasyDoorApp/app/src/main/res/layout/activity_resident_add.xml
+++ b/EasyDoorApp/app/src/main/res/layout/activity_resident_add.xml
@@ -6,8 +6,10 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
     <EditText
+        android:id="@+id/add_name_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="Mansour"/>
     <ImageView
         android:id="@+id/add_add_photo_button"
         android:layout_width="64dp"
