--- a/EasyDoorApp/app/src/main/res/layout/activity_resident_add.xml
+++ b/EasyDoorApp/app/src/main/res/layout/activity_resident_add.xml
@@ -3,13 +3,16 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="16dp"
     android:gravity="center_horizontal"
     android:orientation="vertical">
     <EditText
         android:id="@+id/add_name_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="mansour"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:inputType="textCapSentences|text"
+        android:hint="@string/add_hint"/>
     <ImageView
         android:id="@+id/add_add_photo_button"
         android:layout_width="64dp"
