--- a/EasyDoorCamera/app/src/main/res/layout/activity_main.xml
+++ b/EasyDoorCamera/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jasonxian.easydoortest.MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-</android.support.constraint.ConstraintLayout>
+    android:orientation="vertical">
+    <ImageView
+        android:id="@+id/image1"
+        android:layout_width="256dp"
+        android:layout_height="256dp" />
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="256dp"
+        android:layout_height="256dp" />
+</LinearLayout>
